force-app/main/default/objects/ServiceAppointment/fields/Admission_Counselor__c.field-meta.xml
<CustomField>
    <fullName>Admission_Counselor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Admission Counselor</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>User.Profile.Name</field>
            <operation>equals</operation>
            <value>Admission Counsellor</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Meetings</relationshipName>
    <type>Lookup</type>
</CustomField>