force-app/main/default/objects/ServiceAppointment/fields/Admission_Counselor_Name__c.field-meta.xml
<CustomField>
    <fullName>Admission_Counselor_Name__c</fullName>
    <formula>Admission_Counselor__r.FirstName &amp; &quot; &quot; &amp; Admission_Counselor__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Admission Counselor Name</label>
    <type>Text</type>
</CustomField>