force-app/main/default/objects/ServiceAppointment/fields/Appointment_Status_Custom__c.field-meta.xml
<CustomField>
    <fullName>Appointment_Status_Custom__c</fullName>
    <description>Custom status for tracking no-shows, reschedules, and cancellations beyond standard Status field.</description>
    <label>Appointment Tracking Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Scheduled</fullName>
                <default>true</default>
                <label>Scheduled</label>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>No-Show</fullName>
            </value>
            <value>
                <fullName>Cancelled by Family</fullName>
            </value>
            <value>
                <fullName>Rescheduled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>