force-app/main/default/objects/ServiceAppointment/fields/Attendance_Status__c.field-meta.xml
<CustomField>
    <fullName>Attendance_Status__c</fullName>
    <label>Attendance Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Attended – On Time</fullName>
            </value>
            <value>
                <fullName>Attended – Late</fullName>
            </value>
            <value>
                <fullName>Attended – Left Early</fullName>
            </value>
            <value>
                <fullName>Partial Attendance</fullName>
            </value>
            <value>
                <fullName>Did Not Show</fullName>
            </value>
            <value>
                <fullName>Did Not Show – Attempted Contact</fullName>
            </value>
            <value>
                <fullName>No Show – Reschedule Requested</fullName>
            </value>
            <value>
                <fullName>Cancelled by Student</fullName>
            </value>
            <value>
                <fullName>Cancelled by Staff</fullName>
            </value>
            <value>
                <fullName>Rescheduled by Student</fullName>
            </value>
            <value>
                <fullName>Rescheduled by Staff</fullName>
            </value>
            <value>
                <fullName>Unable to Contact</fullName>
            </value>
            <value>
                <fullName>Technical Issues</fullName>
            </value>
            <value>
                <fullName>Call Declined</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>