force-app/main/default/objects/ServiceAppointment/fields/Cal_UID__c.field-meta.xml
<CustomField>
    <fullName>Cal_UID__c</fullName>
    <label>Cal UID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>