force-app/main/default/objects/ServiceAppointment/fields/Cancellation_Reason__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Reason__c</fullName>
    <description>Captures why the family cancelled or rescheduled the appointment.</description>
    <label>Cancellation Reason</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>