force-app/main/default/objects/ServiceAppointment/fields/Date_Time_of_Cancellation__c.field-meta.xml
<CustomField>
    <fullName>Date_Time_of_Cancellation__c</fullName>
    <description>Date/time in which the meeting was canceled.</description>
    <inlineHelpText>Date/time in which the meeting was canceled.</inlineHelpText>
    <label>Date/Time of Cancellation</label>
    <type>DateTime</type>
</CustomField>