force-app/main/default/objects/ServiceAppointment/fields/DST__c.field-meta.xml
<CustomField>
    <fullName>DST__c</fullName>
    <formula>AND(
  DATEVALUE(SchedStartTime) &gt;=
    (
      DATE(YEAR(DATEVALUE(SchedStartTime)),3,1)
      + MOD(1 - WEEKDAY(DATE(YEAR(DATEVALUE(SchedStartTime)),3,1)), 7)
      + 7
    ),
  DATEVALUE(SchedStartTime) &lt;
    (
      DATE(YEAR(DATEVALUE(SchedStartTime)),11,1)
      + MOD(1 - WEEKDAY(DATE(YEAR(DATEVALUE(SchedStartTime)),11,1)), 7)
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DST</label>
    <type>Checkbox</type>
</CustomField>