force-app/main/default/objects/ServiceAppointment/fields/Educational_Strategist__c.field-meta.xml
<CustomField>
    <fullName>Educational_Strategist__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Educational Strategist</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Service_Appointments</relationshipName>
    <type>Lookup</type>
</CustomField>