force-app/main/default/objects/ServiceAppointment/fields/Educational_Strategist_Name__c.field-meta.xml
<CustomField>
    <fullName>Educational_Strategist_Name__c</fullName>
    <formula>Student__r.Owner.FirstName  &amp; &quot; &quot; &amp;   Student__r.Owner.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Educational Strategist Name</label>
    <type>Text</type>
</CustomField>