force-app/main/default/objects/ServiceAppointment/fields/Family_Success_Specialist__c.field-meta.xml
<CustomField>
    <fullName>Family_Success_Specialist__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Family Success Specialist</label>
    <referenceTo>User</referenceTo>
    <relationshipName>FSS_Meetings</relationshipName>
    <type>Lookup</type>
</CustomField>