force-app/main/default/objects/ServiceAppointment/fields/ICS_Sequence__c.field-meta.xml
<CustomField>
    <fullName>ICS_Sequence__c</fullName>
    <label>ICS Sequence</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>