force-app/main/default/objects/ServiceAppointment/fields/ICS_UID__c.field-meta.xml
<CustomField>
    <fullName>ICS_UID__c</fullName>
    <label>ICS UID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>