force-app/main/default/objects/ServiceAppointment/fields/Is_Duplicate_Family__c.field-meta.xml
<CustomField>
    <fullName>Is_Duplicate_Family__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flagged by Duplicate Family Detection flow when a family already has a prior IC on record.</description>
    <label>Is Duplicate Family</label>
    <type>Checkbox</type>
</CustomField>