force-app/main/default/objects/ServiceAppointment/fields/Is_Rescheduled__c.field-meta.xml
<CustomField>
    <fullName>Is_Rescheduled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Rescheduled</label>
    <type>Checkbox</type>
</CustomField>