force-app/main/default/objects/ServiceAppointment/fields/Landing_Page_Source__c.field-meta.xml
<CustomField>
    <fullName>Landing_Page_Source__c</fullName>
    <label>Landing Page Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>