force-app/main/default/objects/ServiceAppointment/fields/Meeting_Type__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Type__c</fullName>
    <description>Identifies the type of meeting: IC (Initial Consultation) or PD (Program Director call). Used by flows and Apex to route logic, filter appointments, and control reschedule/cancel URL visibility.</description>
    <label>Meeting Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>First Meeting - 60 min.</fullName>
                <label>60 Minute Meeting</label>
            </value>
            <value>
                <fullName>Regular Meeting - 30 min.</fullName>
                <label>30 Minute Meeting</label>
            </value>
            <value>
                <fullName>Initial Consultation</fullName>
            </value>
            <value>
                <fullName>Program Director - 60 Minutes</fullName>
            </value>
            <value>
                <fullName>Program Director Follow Up</fullName>
            </value>
            <value>
                <fullName>FSS Onboarding</fullName>
            </value>
            <value>
                <fullName>FSS Follow Up</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>