force-app/main/default/objects/ServiceAppointment/fields/Program_Director__c.field-meta.xml
<CustomField>
    <fullName>Program_Director__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Program Director</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Meetings1</relationshipName>
    <type>Lookup</type>
</CustomField>