force-app/main/default/objects/ServiceAppointment/fields/Reschedule_Token__c.field-meta.xml
<CustomField>
    <fullName>Reschedule_Token__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>Reschedule Token</label>
    <length>64</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>