force-app/main/default/objects/ServiceAppointment/fields/Reschedule_URL__c.field-meta.xml
<CustomField>
    <fullName>Reschedule_URL__c</fullName>
    <formula>IF(ISBLANK(Reschedule_Token__c), &quot;&quot;, $Label.Booking_Site_Base_URL &amp; &quot;/booking?token=&quot; &amp; Reschedule_Token__c &amp; &quot;&amp;action=reschedule&quot;)</formula>
    <label>Reschedule URL</label>
    <type>Text</type>
</CustomField>