force-app/main/default/objects/ServiceAppointment/fields/Sched_Start_Local__c.field-meta.xml
<CustomField>
    <fullName>Sched_Start_Local__c</fullName>
    <formula>SchedStartTime + Timezone_Offset__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sched Start Local</label>
    <type>DateTime</type>
</CustomField>