force-app/main/default/objects/ServiceAppointment/fields/Scheduled_Start_Display__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_Start_Display__c</fullName>
    <label>Scheduled Start Display</label>
    <length>125</length>
    <type>Text</type>
</CustomField>