force-app/main/default/objects/ServiceAppointment/fields/ScheduleStartTimeText__c.field-meta.xml
<CustomField>
    <fullName>ScheduleStartTimeText__c</fullName>
    <label>ScheduleStartTimeText</label>
    <length>255</length>
    <type>Text</type>
</CustomField>