force-app/main/default/objects/ServiceAppointment/fields/Student__c.field-meta.xml
<CustomField>
    <fullName>Student__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is an additional Student Lookup field to support Scheduling Automations and Visibility.</description>
    <inlineHelpText>This is an additional Student Lookup field to support Scheduling Automations and Visibility.</inlineHelpText>
    <label>Student</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Meetings</relationshipLabel>
    <relationshipName>Service_Appointments</relationshipName>
    <type>Lookup</type>
</CustomField>