force-app/main/default/objects/ServiceAppointment/fields/Student_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Student_First_Name__c</fullName>
    <formula>Student__r.FirstName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Student First Name</label>
    <type>Text</type>
</CustomField>