force-app/main/default/objects/ServiceAppointment/fields/Student_Full_Name__c.field-meta.xml
<CustomField>
    <fullName>Student_Full_Name__c</fullName>
    <formula>Student__r.FirstName &amp; &quot; &quot; &amp; Student__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Student Full Name</label>
    <type>Text</type>
</CustomField>