force-app/main/default/objects/ServiceAppointment/fields/Student_Grade__c.field-meta.xml
<CustomField>
    <fullName>Student_Grade__c</fullName>
    <label>Student Grade</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>5th</fullName>
            </value>
            <value>
                <fullName>6th</fullName>
            </value>
            <value>
                <fullName>7th</fullName>
            </value>
            <value>
                <fullName>8th</fullName>
            </value>
            <value>
                <fullName>9th</fullName>
            </value>
            <value>
                <fullName>10th</fullName>
            </value>
            <value>
                <fullName>11th</fullName>
            </value>
            <value>
                <fullName>12th</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>