force-app/main/default/objects/ServiceAppointment/fields/Timezone_Offset__c.field-meta.xml
<CustomField>
    <fullName>Timezone_Offset__c</fullName>
    <formula>IF(CONTAINS(TEXT(TimeZone),&quot;GMT-04&quot;), -4/24,
IF(CONTAINS(TEXT(TimeZone),&quot;GMT-05&quot;), -5/24,
IF(CONTAINS(TEXT(TimeZone),&quot;GMT-06&quot;), -6/24,
IF(CONTAINS(TEXT(TimeZone),&quot;GMT-07&quot;), -7/24,
IF(CONTAINS(TEXT(TimeZone),&quot;GMT-08&quot;), -8/24,

IF(CONTAINS(TEXT(TimeZone),&quot;Eastern&quot;), IF(DST__c, -4/24, -5/24),
IF(CONTAINS(TEXT(TimeZone),&quot;Central&quot;), IF(DST__c, -5/24, -6/24),
IF(CONTAINS(TEXT(TimeZone),&quot;Mountain&quot;),IF(DST__c, -6/24, -7/24),
IF(CONTAINS(TEXT(TimeZone),&quot;Pacific&quot;), IF(DST__c, -7/24, -8/24),
0
))))
)))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Timezone Offset</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>