force-app/main/default/objects/ServiceAppointment/fields/Zoom_Join_URL__c.field-meta.xml
<CustomField>
    <fullName>Zoom_Join_URL__c</fullName>
    <label>Zoom Join URL</label>
    <type>Url</type>
</CustomField>