force-app/main/default/objects/ServiceAppointment/fields/Zoom_Meeting_ID__c.field-meta.xml
<CustomField>
    <fullName>Zoom_Meeting_ID__c</fullName>
    <label>Zoom Meeting ID</label>
    <length>225</length>
    <type>Text</type>
</CustomField>