force-app/main/default/objects/ServiceAppointment/fields/Zoom_Start_URL__c.field-meta.xml
<CustomField>
    <fullName>Zoom_Start_URL__c</fullName>
    <label>Zoom Start URL</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>