force-app/main/default/objects/ServiceAppointment/listViews/All_ServiceAppointments.listView-meta.xml
<ListView>
    <fullName>All_ServiceAppointments</fullName>
    <columns>Contact</columns>
    <columns>Name</columns>
    <columns>SchedStartTime</columns>
    <columns>SchedEndTime</columns>
    <columns>Owner</columns>
    <columns>CreatedDate</columns>
    <columns>CreatedBy</columns>
    <columns>Status</columns>
    <columns>Account</columns>
    <filterScope>Everything</filterScope>
    <label>All Meetings</label>
</ListView>