force-app/main/default/objects/ServiceAppointment/listViews/My_Meetings.listView-meta.xml
<ListView>
    <fullName>My_Meetings</fullName>
    <columns>Student_Full_Name__c</columns>
    <columns>Name</columns>
    <columns>Status</columns>
    <columns>SchedStartTime</columns>
    <columns>SchedEndTime</columns>
    <columns>Educational_Strategist__c</columns>
    <columns>Contact</columns>
    <columns>Account</columns>
    <columns>CreatedDate</columns>
    <filterScope>Mine</filterScope>
    <label>My Meetings</label>
</ListView>